# unity-2021-mcp

./: .gitignore  DOCS.md  LICENSE  README.md  SETUP.md
plugin/: package.json
plugin/Editor/: CommandDispatcher.cs  CommandRegistry.cs  FindGameObjectsTool.cs  GetSelectionTool.cs  IMcpTransportClient.cs  ManageComponentsTool.cs  ManageEditorTool.cs  ManageGameObjectTool.cs  ManageSceneTool.cs  McpAutoStart.cs  McpEditorWindow.cs  McpForUnityResourceAttribute.cs  McpForUnityToolAttribute.cs  McpLog.cs  McpServerManager.cs  NamingUtility.cs  Pagination.cs  Placeholder.cs  ReadConsoleTool.cs  RefreshUnityTool.cs  RenderPipelineUtility.cs  TcpTransportClient.cs  ToolParameterAttribute.cs  ToolParams.cs  TransportState.cs  UnityMainThreadDispatcher.cs  UnityMcp2021.Editor.asmdef  ValidationUtility.cs
server/: pyproject.toml
server/src/unity_2021_mcp/: __init__.py  logging_config.py  main.py  server.py
server/src/unity_2021_mcp/core/: __init__.py  config.py
server/src/unity_2021_mcp/tools/: __init__.py  registry.py
server/src/unity_2021_mcp/transport/: __init__.py  unity_connection.py
server/tests/: test_logging_config.py  test_placeholder.py
wiki/: Adding-Custom-Tools.md  Architecture.md  Available-Tools.md  Configuration.md  Home.md  Python-Server.md  Setup-Guide.md  Troubleshooting.md  Unity-Plugin.md  _Sidebar.md
